components/real-estate-stories/_index.scss
@import "../progress-bar/";

._real-estate-stories {
    .modal {
        background-color: $sec-cinza-escuro;
        height: 100vh;
        overflow: hidden;
    }
    .modal-inner {
        display: flex;
        height: 100%;
        align-items: center;
        justify-content: center;
    }

    /** Inner Slider */
    .stories-slider {
        position: relative;
        pointer-events: all;

        .swiper-controls {
            position: absolute;
            z-index: 5;
            top: 20px;
            right: 25px;
            gap: 8px;
            display: flex;

            button {
                background: none;
                border: 0;
                padding: 0;
                color: #fff;
                font-size: 24px;
                opacity: 0.9;
                transition: 200ms opacity;

                &:hover {
                    opacity: 1;
                }
            }
            .pause {
                .icon-play {
                    display: none;
                }
            }
        }

        .swiper-slide {
            height: 603px;
            border-radius: 4px;
            display: flex;

            .slide-inner {
                flex: 1;

                &:before {
                    content: "";
                    z-index: 1;
                    position: absolute;
                    top: 0;
                    left: 0;
                    right: 0;
                    height: 178px;
                    border-radius: 4px;
                    background: linear-gradient(
                        180deg,
                        #000000 0%,
                        rgba(0, 37, 65, 0) 100%
                    );
                    opacity: 0.65;
                    border-radius: 4px 4px 0px 0px;
                }
            }

            .slide-caption {
                position: absolute;
                z-index: 5;
                color: #fff;
                top: 25px;
                left: 20px;
                font-size: 12px;
                font-weight: 500;
            }

            .thumbnail {
                height: 100%;
                width: 100%;
                object-fit: cover;
                border-radius: 4px;
            }
        }

        &.paused {
            .swiper-pagination-bullet.swiper-pagination-bullet-active {
                &:before {
                    animation-play-state: paused !important;
                }
            }
            .swiper-controls {
                .icon-play {
                    display: block;
                }
                .icon-pause {
                    display: none;
                }
            }
        }
    }

    .swiper-pagination {
        margin-top: 0;
        margin-bottom: 18px;
        display: flex;
        justify-content: stretch;
        gap: 11px;

        .swiper-pagination-bullet {
            height: 5px;
            flex: 1;
            background-color: white;
            opacity: 1;
            margin: 0;
            position: relative;
            overflow: hidden;

            &:before {
                content: "";
                position: absolute;
                top: 0;
                left: 0;
                bottom: 0;
                background-color: white;
                border-radius: 50px;
                animation-play-state: paused;
            }

            @keyframes progress {
                0% {
                    width: 0%;
                }
                100% {
                    width: 100%;
                }
            }

            &.swiper-pagination-bullet-active {
                background-color: rgba(255, 255, 255, 0.5);
                &:before {
                    animation-name: progress;
                    animation-timing-function: linear;
                    animation-duration: 2s;
                    animation-play-state: running;
                    animation-fill-mode: forwards;
                }

                & ~ .swiper-pagination-bullet {
                    background-color: rgba(255, 255, 255, 0.5);
                }
            }
        }
    }

    .swiper-nav-container {
        position: absolute;
        pointer-events: none;
        left: -20px;
        right: -20px;
        top: 0px;
        bottom: 0px;
        z-index: 5;
        align-items: center;
        justify-content: space-between;
        display: flex;

        .swiper-nav {
            pointer-events: all;
            transition: 200ms all;

            &.swiper-button-disabled {
                opacity: 0;
                visibility: hidden;
            }

            .icon {
                color: #fff;
            }
        }
    }

    .inactive-wrap {
        opacity: 0;
        visibility: hidden;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background-color: rgba(0, 0, 0, 0.65);
        z-index: 10;
        border-radius: 4px;
        display: flex;
        align-items: center;
        justify-content: center;

        .inner {
            transform: scale(1.66);

            ._real-estate-action {
                p {
                    line-height: 14px;
                    color: #fff;
                }
            }
        }
    }

    @import "./slide-book";
    @import "./slide-cronograma";
    @import "./slide-status";

    /** Outer Carousel */
    .stories-carousel {
        flex: 1;
        //margin-left: -35px;
        //margin-right: -35px;

        &.landscape {
            .carousel-slide {
                &.swiper-slide-active {
                    width: 100%;
                    padding-left: 40px;
                    padding-right: 40px;
                }
            }
        }

        & > {
            .swiper-wrapper {
                transition-duration: 200ms !important;
            }
        }

        .carousel-slide {
            width: 370px;
            transition: 200ms all;
            margin-left: -58px;
            margin-right: -58px;
            will-change: transform;
            transform: scale(0.6) translateZ(0);

            .swiper-pagination-bullet {
                &:before {
                    animation-play-state: paused;
                }
            }

            &.swiper-slide-active {
                margin-left: 35px;
                margin-right: 35px;
                transform: scale(1) translateZ(0);

                .swiper-pagination-bullet {
                    &:before {
                        animation-play-state: running;
                    }
                }
            }
            .swiper-controls,
            .swiper-pagination,
            .swiper-nav-container,
            .slide-caption,
            .inactive-wrap,
            .book-inner {
                transition: 200ms all;
            }

            &:not(.swiper-slide-active) {
                .swiper-controls,
                //.swiper-pagination,
                .swiper-nav-container,
                .slide-caption,
                .book-inner {
                    opacity: 0;
                    visibility: hidden;
                }
                .inactive-wrap {
                    opacity: 1;
                    visibility: visible;
                }
            }

            &:first-child {
                margin-left: 0;
            }

            &:last-child {
                margin-right: 0;
            }
        }
    }
}

